--- a/src/components/UserControl.css
+++ b/src/components/UserControl.css
@@ -14,6 +14,7 @@
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: all var(--transition-speed) ease;
+  animation: fadeIn 0.5s ease-in-out;
 }
 
 .user-control * {
@@ -29,6 +30,7 @@
   text-transform: uppercase;
   letter-spacing: 1.5px;
   position: relative;
+  animation: slideInFromLeft 0.5s ease-in-out;
 }
 
 .user-control-heading::after {
@@ -54,8 +56,8 @@
   border-radius: 30px;
   font-size: 1em;
   cursor: pointer;
-  transition: background-color var(--transition-speed) ease,
-    transform var(--transition-speed) ease;
+  transition: background-color var(--transition-speed) ease, transform var(--transition-speed) ease;
+  animation: fadeIn 0.6s ease-in-out;
 }
 
 .add-user-btn:hover {
@@ -63,82 +65,34 @@
   transform: translateY(-2px);
 }
 
-.modal {
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: opacity var(--transition-speed) ease;
-}
-
-.modal-content {
-  background-color: var(--background-color);
-  padding: 7px 15px 15px 15px;
+.add-user-form {
+  margin: 20px 0;
+  padding: 20px;
+  background: var(--accent-color);
   border-radius: 8px;
-  max-width: 350px; /* Reduced max width */
-  width: 100%;
-  max-height: 520px; /* Reduce height */
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  animation: fadeIn 0.5s ease-in-out;
-}
-
-.close-btn {
-  font-size: 20px; /* Reduced font size */
-  font-weight: bold;
-  color: var(--primary-color);
-  cursor: pointer;
-  align-self: flex-end;
-  margin-bottom: 10px;
-  transition: color var(--transition-speed) ease;
-}
-
-.close-btn:hover {
-  color: var(--secondary-color);
-}
-
-h2 {
-  margin-top: 0;
-  text-align: center;
-  color: var(--primary-color);
-  font-size: 1.2em; /* Smaller font size */
-  margin-bottom: 10px; /* Reduced margin */
-  letter-spacing: 1px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  animation: slideInFromBottom 0.5s ease-in-out;
 }
 
 .form-group {
-  width: 100%;
-  margin-bottom: 10px; /* Reduced margin */
-  text-align: left;
+  margin-bottom: 15px;
 }
 
 .form-group label {
   display: block;
-  margin-bottom: 3px; /* Reduced margin */
+  margin-bottom: 5px;
   color: var(--secondary-color);
-  font-size: 0.9em; /* Smaller font size */
+  font-weight: bold;
+  transition: color var(--transition-speed) ease;
 }
 
 .form-group input,
 .form-group select {
   width: calc(100% - 10px);
-  padding: 8px; /* Reduced padding */
-  margin: 0;
+  padding: 10px;
   border-radius: 5px;
   border: 1px solid var(--border-color);
-  font-size: 0.9em; /* Smaller font size */
-  transition: border-color var(--transition-speed) ease,
-    background-color var(--transition-speed) ease;
+  transition: border-color var(--transition-speed) ease, background-color var(--transition-speed) ease;
 }
 
 .form-group input:focus,
@@ -148,28 +102,28 @@ h2 {
 }
 
 .btn-submit {
-  width: 100%;
+  display: inline-block;
   background-color: var(--primary-color);
   color: white;
   border: none;
-  padding: 8px;
-  border-radius: 20px;
-  font-size: 0.9em; /* Smaller font size */
+  padding: 10px 20px;
+  border-radius: 30px;
+  font-size: 1em;
   cursor: pointer;
-  margin-top: 10px;
-  transition: background-color var(--transition-speed) ease,
-    transform var(--transition-speed) ease;
+  transition: background-color var(--transition-speed) ease, transform var(--transition-speed) ease;
+  animation: fadeIn 0.7s ease-in-out;
 }
 
 .btn-submit:hover {
   background-color: #1f6391;
   transform: translateY(-2px);
 }
+
 .user-table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 20px;
-  transition: all var(--transition-speed) ease;
+  animation: fadeIn 0.8s ease-in-out;
 }
 
 .user-table th,
@@ -186,11 +140,26 @@ h2 {
   color: white;
   font-size: 1em;
   text-transform: uppercase;
+  animation: slideInFromTop 0.5s ease-in-out;
   position: relative;
 }
 
 .user-table th:hover {
   background-color: var(--primary-color);
+}
+
+.user-table th:after {
+  content: '';
+  display: inline-block;
+  margin-left: 5px;
+}
+
+.user-table th.sort-ascending:after {
+  content: '↑';
+}
+
+.user-table th.sort-descending:after {
+  content: '↓';
 }
 
 .user-table tr:nth-child(even) {
@@ -271,11 +240,56 @@ input:checked + .toggle-switch-slider:before {
   font-size: 1em;
   text-align: center;
   margin-bottom: 20px;
+  animation: fadeIn 0.9s ease-in-out;
 }
 
 .user-table tr.deactivated {
   color: grey;
   background-color: #f9f9f9;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInFromLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromBottom {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInFromTop {
+  from {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .edit-cluster-input {
@@ -305,43 +319,64 @@ input:checked + .toggle-switch-slider:before {
   transform: scale(1.1);
 }
 
-/* Animations */
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+.edit-cluster-input::after {
+  content: '✔';
+  color: var(--primary-color);
+  margin-left: 10px;
+  cursor: pointer;
+  transition: color var(--transition-speed) ease, transform var (--transition-speed) ease;
 }
 
-@keyframes slideInFromBottom {
-  from {
-    transform: translateY(50px);
-  }
-  to {
-    transform: translateY(0);
-  }
+.edit-cluster-input:hover::after {
+  color: var(--secondary-color);
+  transform: scale(1.2);
 }
 
-@keyframes slideInFromTop {
-  from {
-    opacity: 0;
-    transform: translateY(-50px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+.activity-log-btn {
+  display: block;
+  margin: 20px auto;
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 30px;
+  font-size: 1em;
+  cursor: pointer;
+  transition: background-color var(--transition-speed) ease, transform var(--transition-speed) ease;
+  animation: fadeIn 0.6s ease-in-out;
 }
 
-@keyframes slideInFromLeft {
-  from {
-    opacity: 0;
-    transform: translateX(-50px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
+.activity-log-btn:hover {
+  background-color: #1f6391;
+  transform: translateY(-2px);
+}
+
+.activity-log {
+  margin-top: 20px;
+  background-color: var(--accent-color);
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  animation: fadeIn 0.8s ease-in-out;
+}
+
+.activity-log h3 {
+  margin: 0 0 10px 0;
+  font-size: 1.5em;
+  color: var(--secondary-color);
+}
+
+.activity-log ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.activity-log li {
+  padding: 5px 0;
+  border-bottom: 1px solid var(--border-color);
+}
+
+.activity-log li:last-child {
+  border-bottom: none;
 }
